WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299578
Viewport clipping layers are incorrectly positioned when the element is captured in a view transition
https://bugs.webkit.org/show_bug.cgi?id=299578
Summary
Viewport clipping layers are incorrectly positioned when the element is captu...
Matt Woodrow
Reported
2025-09-25 18:54:12 PDT
rdar://154886047
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2025-09-25 18:57:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51360
EWS
Comment 2
2025-09-26 00:19:34 PDT
Committed
300561@main
(3c71d5e470ce): <
https://commits.webkit.org/300561@main
> Reviewed commits have been landed. Closing PR #51360 and removing active labels.
EWS
Comment 3
2025-09-26 19:21:37 PDT
Committed
297297.480@safari-7622-branch
(46bb4dfe49e8): <
https://commits.webkit.org/297297.480@safari-7622-branch
> Reviewed commits have been landed. Closing PR #3714 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug