Viewport clipping layers are incorrectly positioned when the element is captured in a view transition. https://bugs.webkit.org/show_bug.cgi?id=299578 rdar://154886047

Reviewed by Wenson Hsieh.

Viewport clipping layers should only be added for layers that have the
RenderView as their composited ancestor.

Once they get captured in a view transition, their GraphicsLayers will get
reparented as replaced contents into the pseudo element's layers (which is
guaranteed to be composited) so they no longer meet this criteria. As such,
their computed position can be incorrect (not accounting for ancestor offsets)
and they clip incorrectly.

* LayoutTests/platform/ios-18/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-sequoia/TestExpectations:
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::viewportConstrainedSublayers const):
* Source/WebCore/rendering/RenderObject.cpp:
(WebCore::RenderObject::setCapturedInViewTransition):

Canonical link: https://commits.webkit.org/300561@main